[package]
name = "mamba"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.2.4", features = ["derive"] }
memmap2 = "0.9.3"
rand = "0.8.5"
rayon = "1.8.1"
fancy-regex = "0.13.0"
serde_json = "1.0.112"

[lib]
name = "mamba"
path = "src/lib.rs"

[[bin]]
name = "mamba"
path = "src/main.rs"
